// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`only renders content if its there 1`] = `
<div
  className=""
/>
`;

exports[`only renders content if its there 2`] = `
<div
  className=""
>
  <content
    className={undefined}
    currentPage={null}
  />
</div>
`;
